chore: rpm fix - deb changed as well with repro

--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -122,139 +122,82 @@ jobs:
       AWS_REPO_PATH: "${{ inputs.aws_repo_base_path }}/${{ inputs.package_type }}"
       LOCAL_REPO_PATH: ${{ github.workspace }}/${{ inputs.package_type }}
       NODE_VERSION: ${{ needs.fetch-artifacts-from-s3.outputs.NODE_VERSION }}
-
-    # We are gonna use the same key both for rpm and deb packages - maybe logic of the key is not ready to be used for RPM at this moment
     steps:
-      - name: Install pgpkms for artifact signing
+      - name: Install dependencies
         run: |
+          sudo apt-get update
+          # Install all tools needed for both deb and rpm
+          sudo apt-get install -y python3-pip awscli reprepro rpm createrepo-c
           python3 -m pip install "pgpkms @ git+https://github.com/paritytech-release/pgpkms.git@e7f806f99e9be5c52f0b4a536b7d4ef9c3e695ed"
           echo "PGPKMS_REPREPRO_PATH=$(which pgpkms-reprepro)" >> $GITHUB_ENV
-
-          # --- ADD THIS LINE FOR DEBUGGING ---
-          echo "--- Listing all installed pgpkms tools ---"
-          ls -l /home/runner/.local/bin/pgpkms*
-
-      - name: Install awscli for S3 and CloudFront interaction
-        run: |
-          python3 -m pip install awscli
-          which aws
 
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
-      - name: Import GPG keys using pgpkms
+      - name: Import GPG keys
         shell: bash
+        env:
+          PGP_KMS_KEY: ${{ secrets.pgp_kms_key }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key_id }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_access_key }}
         run: |
           . ./.github/scripts/common/lib.sh
           import_gpg_keys
 
       - name: Download artifacts from previous job
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.ls.8
         with:
           name: release-artifacts
           path: release-artifacts
 
-      # For LOCAL_REPO_PATH use "./deb" or "./rpm" depending on package type
-      # FOR AWS_REPO_PATH use "s3://releases-package-repos/deb" or "s3://releases-package-repos/rpm/" depending on package type
-      # ☝️ this is done in env section above
-      # TODO: check if "/" after rpm is problematic - it would be great that our format is the same, found here: https://github.com/paritytech/cleanroom/commit/6fdec6d0ce41121ad67152b7bb6f944bbdae9f03#diff-bf10049fb0c22a74f58b04cf2d2f80010eefbe62828492fff235c667d7275793L19
-      - name: Setup local repo
+      - name: Setup local deb repo config
         if: ${{ inputs.package_type == 'deb' }}
         run: |
-          sudo apt-get update
-
-          if [[ "${{ inputs.package_type }}" == "deb" ]]; then
-            sudo apt-get install -y reprepro
-            which reprepro
-          fi
-
-          # Configure reprepro to use pgpkms for signing
           sed -i "s|^SignWith:.*|SignWith: ! ${PGPKMS_REPREPRO_PATH}|" ${{ github.workspace }}/.github/scripts/release/distributions
-
-          # Create and copy distribution configuration for reprepro
           mkdir -p "$LOCAL_REPO_PATH/conf"
           cp ${{ github.workspace }}/.github/scripts/release/distributions "$LOCAL_REPO_PATH/conf/distributions"
-          cat "$LOCAL_REPO_PATH/conf/distributions"
 
-      - name: Sync local repo (download from S3)
+      - name: Sync repo from S3
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.aws_release_access_key_id }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
         run: |
           mkdir -p "$LOCAL_REPO_PATH"
-          # Sync database and configuration files
-          aws s3 sync "$AWS_REPO_PATH/db" "$LOCAL_REPO_PATH/db" || true # `|| true` to avoid failing if dir doesn't exist yet
-
           if [[ "${{ inputs.package_type }}" == "deb" ]]; then
+            aws s3 sync "$AWS_REPO_PATH/db" "$LOCAL_REPO_PATH/db" || true
             aws s3 sync "$AWS_REPO_PATH/pool" "$LOCAL_REPO_PATH/pool" || true
             aws s3 sync "$AWS_REPO_PATH/dists" "$LOCAL_REPO_PATH/dists" || true
           elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
-            aws s3 sync "$LOCAL_REPO_PATH" "$AWS_REPO_PATH" --acl public-read
+            aws s3 sync "$AWS_REPO_PATH" "$LOCAL_REPO_PATH" || true
           fi
 
-      - name: Verify Downloaded RPM Integrity
-        if: ${{ inputs.package_type == 'rpm' }}
-        run: |
-          sudo apt-get update && sudo apt-get install -y rpm
-          
-          # CORRECTED: Looking for a hyphen instead of an underscore
-          rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' -print -quit)
-          if [ -z "$rpmname" ]; then
-            echo "Error: RPM package artifact not found for verification."
-            echo "Contents of release-artifacts directory:"
-            ls -R release-artifacts/
-            exit 1
-          fi
-          echo "Verifying integrity of $rpmname..."
-          rpm -vK "$rpmname" || true # Use || true to avoid failing the step if verification fails
-
-      - name: Install signing and repo tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y rpm createrepo-c reprepro
-
-      - name: Add package to local repo
+      - name: Add package to repo, sign, and update metadata
         env:
-          PGP_KMS_KEY:  ${{ secrets.pgp_kms_key }}
-          PGP_KMS_HASH:  ${{ secrets.pgp_kms_hash }}
-          AWS_ACCESS_KEY_ID:  ${{ secrets.aws_access_key_id }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_access_key }}
+          PGP_KMS_HASH: ${{ secrets.pgp_kms_hash }}
         run: |
           if [[ "${{ inputs.package_type }}" == "deb" ]]; then
-            # Find the downloaded .deb artifact
             debname=$(find release-artifacts/ -name 'polkadot_*.deb' -print -quit)
-            if [ -z "$debname" ]; then
-              echo "Error: Debian package artifact not found in release-artifacts/"
-              exit 1
-            fi
-            echo "Found DEB package: $debname"
-            echo "Local repo path $LOCAL_REPO_PATH"
-            echo "AWS default region $AWS_DEFAULT_REGION"
-
-            # Add the package to the local Debian repository
             reprepro -b "$LOCAL_REPO_PATH" includedeb "${{ inputs.distribution }}" "$debname"
+          
           elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
             rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' -print -quit)
-            if [ -z "$rpmname" ]; then
-              echo "Error: RPM package artifact not found in release-artifacts/"
-              exit 1
-            fi
-            echo "Found RPM package: $rpmname"
-
-            PGPKMS_RPM_SIGNER=$(which pgpkms-rpm-signer)
-            sed -i "s|%__gpg_sign_cmd.*|%__gpg_sign_cmd ${PGPKMS_RPM_SIGNER} %{__plaintext_filename}|" ./.github/workflows/rpmmacros
             
-            echo "--- Modified rpmmacros file ---"
-            cat ./.github/workflows/rpmmacros
+            # Create a minimal .rpmmacros file on the fly
+            # This tells rpmsign which key to use
+            echo "%_signature gpg" > ${HOME}/.rpmmacros
+            echo "%_gpg_name ${PGP_KMS_HASH}" >> ${HOME}/.rpmmacros
+
+            echo "--- Using .rpmmacros file ---"
+            cat ${HOME}/.rpmmacros
             echo "-----------------------------"
 
-            rpm \
-              --define "_topdir $(pwd)" \
-              --rcfile "$(pwd)/.github/workflows/rpmmacros" \
-              --addsign "$rpmname"
+            echo "Signing package directly on the runner..."
+            rpmsign --addsign "$rpmname"
 
+            echo "Copying signed package to local repo..."
             cp "$rpmname" "$LOCAL_REPO_PATH/"
 
+            echo "Updating repository metadata..."
             createrepo_c --update "$LOCAL_REPO_PATH"
           fi
 
@@ -263,17 +206,5 @@ jobs:
           AWS_ACCESS_KEY_ID:  ${{ secrets.aws_release_access_key_id }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
         run: |
-          if [[ "${{ inputs.package_type }}" == "deb" ]]; then
-            # For Debian, pool and dists directories need public-read ACL
-            aws s3 sync "$LOCAL_REPO_PATH/pool" "$AWS_REPO_PATH/pool" --acl public-read
-            aws s3 sync "$LOCAL_REPO_PATH/dists" "$AWS_REPO_PATH/dists" --acl public-read
-
-            aws s3 sync "$LOCAL_REPO_PATH/db" "$AWS_REPO_PATH/db"
-            aws s3 sync "$LOCAL_REPO_PATH/conf" "$AWS_REPO_PATH/conf" || true # conf might not exist for RPM, so allow failure
-
-          elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
-            aws s3 sync "$LOCAL_REPO_PATH" "$AWS_REPO_PATH" --acl public-read
-          fi
-
-          # Invalidate CloudFront cache to serve latest files
+          aws s3 sync "$LOCAL_REPO_PATH" "$AWS_REPO_PATH" --acl public-read
           aws cloudfront create-invalidation --distribution-id ${{ inputs.cloudfront_distribution_id }} --paths '/${{ inputs.package_type }}/*'
