chore: install deps with pip

--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -125,10 +125,15 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
+          # Install system packages with apt-get
           sudo apt-get update
-          # Install all tools needed for both deb and rpm
-          sudo apt-get install -y python3-pip awscli reprepro rpm createrepo-c
+          sudo apt-get install -y python3-pip reprepro rpm createrepo-c
+
+          # Install Python packages with pip
           python3 -m pip install "pgpkms @ git+https://github.com/paritytech-release/pgpkms.git@e7f806f99e9be5c52f0b4a536b7d4ef9c3e695ed"
+          python3 -m pip install awscli
+
+          # Set the path for the pgpkms wrapper tool for the debian step
           echo "PGPKMS_REPREPRO_PATH=$(which pgpkms-reprepro)" >> $GITHUB_ENV
 
       - name: Checkout sources
