--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -125,32 +125,16 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          # Install system packages with apt-get
           sudo apt-get update
-          sudo apt-get install -y python3-pip reprepro rpm createrepo-c
-
-          # Install Python packages with pip
+          sudo apt-get install -y python3-pip awscli reprepro rpm createrepo-c
           python3 -m pip install "pgpkms @ git+https://github.com/paritytech-release/pgpkms.git@e7f806f99e9be5c52f0b4a536b7d4ef9c3e695ed"
-          python3 -m pip install awscli
-
-          # Set the path for the pgpkms wrapper tool for the debian step
           echo "PGPKMS_REPREPRO_PATH=$(which pgpkms-reprepro)" >> $GITHUB_ENV
 
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
-      - name: Import GPG keys
-        shell: bash
-        env:
-          PGP_KMS_KEY: ${{ secrets.pgp_kms_key }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key_id }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_access_key }}
-        run: |
-          . ./.github/scripts/common/lib.sh
-          import_gpg_keys
-
       - name: Download artifacts from previous job
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.ls.8
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: release-artifacts
           path: release-artifacts
@@ -162,11 +146,14 @@ jobs:
           mkdir -p "$LOCAL_REPO_PATH/conf"
           cp ${{ github.workspace }}/.github/scripts/release/distributions "$LOCAL_REPO_PATH/conf/distributions"
 
-      - name: Sync repo from S3
+      - name: Sync repo, import keys, sign, and update metadata
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.aws_release_access_key_id }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
+          PGP_KMS_KEY:  ${{ secrets.pgp_kms_key }}
+          PGP_KMS_HASH:  ${{ secrets.pgp_kms_hash }}
         run: |
+          # --- Sync Repo from S3 ---
           mkdir -p "$LOCAL_REPO_PATH"
           if [[ "${{ inputs.package_type }}" == "deb" ]]; then
             aws s3 sync "$AWS_REPO_PATH/db" "$LOCAL_REPO_PATH/db" || true
@@ -176,26 +163,22 @@ jobs:
             aws s3 sync "$AWS_REPO_PATH" "$LOCAL_REPO_PATH" || true
           fi
 
-      - name: Add package to repo, sign, and update metadata
-        env:
-          PGP_KMS_HASH: ${{ secrets.pgp_kms_hash }}
-        run: |
+          # --- Import GPG Keys ---
+          # This sets up the GPG agent in the current shell
+          . ./.github/scripts/common/lib.sh
+          import_gpg_keys
+          
+          # --- Add Package to Repo and Sign ---
           if [[ "${{ inputs.package_type }}" == "deb" ]]; then
-            debname=$(find release-artifacts/ -name 'polkadot_*.deb' -print -quit)
+            debname=$(find release-artifacts/ -name 'polkadot_*.deb' -print-quit)
             reprepro -b "$LOCAL_REPO_PATH" includedeb "${{ inputs.distribution }}" "$debname"
           
           elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
-            rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' -print -quit)
+            rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' -print-quit)
             
-            # Create a minimal .rpmmacros file on the fly
-            # This tells rpmsign which key to use
             echo "%_signature gpg" > ${HOME}/.rpmmacros
             echo "%_gpg_name ${PGP_KMS_HASH}" >> ${HOME}/.rpmmacros
-
-            echo "--- Using .rpmmacros file ---"
-            cat ${HOME}/.rpmmacros
-            echo "-----------------------------"
-
+            
             echo "Signing package directly on the runner..."
             rpmsign --addsign "$rpmname"
 
