--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -167,17 +167,18 @@ jobs:
           fi
 
           # --- Import GPG Keys ---
-          # This sets up the GPG agent in the current shell
           . ./.github/scripts/common/lib.sh
           import_gpg_keys
           
           # --- Add Package to Repo and Sign ---
           if [[ "${{ inputs.package_type }}" == "deb" ]]; then
-            debname=$(find release-artifacts/ -name 'polkadot_*.deb' -print-quit)
+            # CORRECTED: Replaced non-portable '-print-quit'
+            debname=$(find release-artifacts/ -name 'polkadot_*.deb' | head -n 1)
             reprepro -b "$LOCAL_REPO_PATH" includedeb "${{ inputs.distribution }}" "$debname"
           
           elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
-            rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' -print-quit)
+            # CORRECTED: Replaced non-portable '-print-quit'
+            rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' | head -n 1)
             
             echo "%_signature gpg" > ${HOME}/.rpmmacros
             echo "%_gpg_name ${PGP_KMS_HASH}" >> ${HOME}/.rpmmacros
