--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -18,7 +18,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 alloy-consensus = { workspace = true, default-features = false }
-alloy-core = { workspace = true, features = ["sol-types"] }
+alloy-core = { workspace = true, features = ["sol-types", "rlp"] }
+alloy-rlp = { version = "0.3.12", default-features = false }
 codec = { features = ["derive", "max-encoded-len"], workspace = true }
 derive_more = { workspace = true, features = ["from", "try_into"] }
 environmental = { workspace = true }
@@ -63,6 +64,7 @@ sp-version = { workspace = true }
 subxt-signer = { workspace = true, optional = true, features = ["unstable-eth"] }
 
 [dev-dependencies]
+alloy-consensus = { workspace = true, features = ["serde"] }
 array-bytes = { workspace = true, default-features = true }
 assert_matches = { workspace = true }
 pretty_assertions = { workspace = true }
