--- a/Cargo.toml
+++ b/Cargo.toml
@@ -640,8 +640,8 @@ ark-bls12-377 = { version = "0.5.0", default-features = false }
 ark-bls12-377-ext = { version = "0.5.0", default-features = false }
 ark-bls12-381 = { version = "0.5.0", default-features = false }
 ark-bls12-381-ext = { version = "0.5.0", default-features = false }
-# ark-bw6-761 = { version = "0.4.0", default-features = false }
-# ark-bw6-761-ext = { version = "0.4.1", default-features = false }
+ark-bw6-761 = { version = "0.5.0", default-features = false }
+ark-bw6-761-ext = { version = "0.5.0", default-features = false }
 ark-ec = { version = "0.5.0", default-features = false }
 # ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false }
 # ark-ed-on-bls12-377-ext = { version = "0.4.1", default-features = false }
