--- a/substrate/primitives/crypto/ec-utils/Cargo.toml
+++ b/substrate/primitives/crypto/ec-utils/Cargo.toml
@@ -19,8 +19,8 @@ ark-bls12-377 = { features = ["curve"], optional = true, workspace = true }
 ark-bls12-377-ext = { optional = true, workspace = true }
 ark-bls12-381 = { features = ["curve"], optional = true, workspace = true }
 ark-bls12-381-ext = { optional = true, workspace = true }
-# ark-bw6-761 = { optional = true, workspace = true }
-# ark-bw6-761-ext = { optional = true, workspace = true }
+ark-bw6-761 = { optional = true, workspace = true }
+ark-bw6-761-ext = { optional = true, workspace = true }
 ark-ec = { optional = true, workspace = true }
 # ark-ed-on-bls12-377 = { optional = true, workspace = true }
 # ark-ed-on-bls12-377-ext = { optional = true, workspace = true }
@@ -36,8 +36,8 @@ std = [
 	"ark-bls12-377?/std",
 	"ark-bls12-381-ext?/std",
 	"ark-bls12-381?/std",
-	# "ark-bw6-761-ext?/std",
-	# "ark-bw6-761?/std",
+	"ark-bw6-761-ext?/std",
+	"ark-bw6-761?/std",
 	"ark-ec?/parallel",
 	"ark-ec?/std",
 	# "ark-ed-on-bls12-377-ext?/std",
@@ -50,7 +50,7 @@ std = [
 common = ["ark-ec", "ark-scale", "sp-runtime-interface"]
 bls12-377 = ["ark-bls12-377", "ark-bls12-377-ext", "common"]
 bls12-381 = ["ark-bls12-381", "ark-bls12-381-ext", "common"]
-# bw6-761 = ["ark-bw6-761", "ark-bw6-761-ext", "common"]
+bw6-761 = ["ark-bw6-761", "ark-bw6-761-ext", "common"]
 # ed-on-bls12-377 = ["ark-ed-on-bls12-377", "ark-ed-on-bls12-377-ext", "common"]
 # ed-on-bls12-381-bandersnatch = [
 # 	"ark-ed-on-bls12-381-bandersnatch",
@@ -60,7 +60,7 @@ bls12-381 = ["ark-bls12-381", "ark-bls12-381-ext", "common"]
 all-curves = [
 	"bls12-377",
 	"bls12-381",
-	# "bw6-761",
+	"bw6-761",
 	# "ed-on-bls12-377",
 	# "ed-on-bls12-381-bandersnatch",
 ]
