chore: rpm path fix

--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -178,8 +178,8 @@ jobs:
             rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' | head -n 1)
 
             echo "Patching rpmmacros to use pgpkms-rpmsign..."
-            sed -i "s|^%_gpg_name.*|%_gpg_name ${PGP_KMS_HASH}|" ${HOME}/.rpmmacros || echo "%_gpg_name ${PGP_KMS_HASH}" >> ${HOME}/.rpmmacros
-            sed -i "s|^%__gpg_sign_cmd.*|%__gpg_sign_cmd ${PGPKMS_RPMSIGN_PATH} --key ${PGP_KMS_KEY} --digest-algo sha256 --detach-sign --armor --batch --no-verbose --output %{__signature_filename} %{__plaintext_filename}|" ${HOME}/.rpmmacros
+            sed -i "s|^%_gpg_name.*|%_gpg_name ${PGP_KMS_HASH}|" ${{ github.workspace }}/.github/workflows/release/.rpmmacros || echo "%_gpg_name ${PGP_KMS_HASH}" >> ${{ github.workspace }}/.github/workflows/release/.rpmmacros
+            sed -i "s|^%__gpg_sign_cmd.*|%__gpg_sign_cmd ${PGPKMS_RPMSIGN_PATH} --key ${PGP_KMS_KEY} --digest-algo sha256 --detach-sign --armor --batch --no-verbose --output %{__signature_filename} %{__plaintext_filename}|" ${{ github.workspace }}/.github/workflows/release/.rpmmacros
 
             echo "Signing package with pgpkms (via AWS KMS)..."
             rpmsign --addsign "$rpmname"
