chore: add inspect

--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -130,10 +130,20 @@ jobs:
 
           python3 -m pip install --user awscli "pgpkms @ git+https://github.com/paritytech-release/pgpkms.git@e7f806f99e9be5c52f0b4a536b7d4ef9c3e695ed"
 
+          echo "first 🔍 Checking for pgpkms-rpmsign..."
+          echo "pgpkms-rpmsign resolved to: ${PGPKMS_RPMSIGN_PATH}"
+
+          export PATH=$HOME/.local/bin:$PATH
           echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+          echo "second 🔍 Checking for pgpkms-rpmsign..."
+          echo "pgpkms-rpmsign resolved to: ${PGPKMS_RPMSIGN_PATH}"
 
           echo "PGPKMS_REPREPRO_PATH=$(which pgpkms-reprepro)" >> $GITHUB_ENV
           echo "PGPKMS_RPMSIGN_PATH=$(which pgpkms-rpmsign)" >> $GITHUB_ENV
+
+          echo "third 🔍 Checking for pgpkms-rpmsign..."
+          echo "pgpkms-rpmsign resolved to: ${PGPKMS_RPMSIGN_PATH}"
 
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -179,7 +189,7 @@ jobs:
           elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
             rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' | head -n 1)
 
-            echo "🔍 Checking for pgpkms-rpmsign..."
+            echo "fourth 🔍 Checking for pgpkms-rpmsign..."
             echo "pgpkms-rpmsign resolved to: ${PGPKMS_RPMSIGN_PATH}"
 
             echo "Signing package with pgpkms (via AWS KMS)..."
