--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -187,9 +187,8 @@ jobs:
               -D "_signature gpg" \
               -D "_gpg_name ${PGP_KMS_HASH}" \
               -D "__gpg $HOME/.local/bin/pgpkms" \
-              -D "__gpg_sign_cmd %{__gpg} gpg --key ${PGP_KMS_KEY} --digest-algo sha256 \
-                  --detach-sign --armor --batch --no-verbose \
-                  --output %{__signature_filename} %{__plaintext_filename}" \
+              -D "__gpg_sign_cmd %{__gpg} gpg --batch --no-verbose --no-armor \
+                  -u %{_gpg_name} -sbo %{__signature_filename} --digest-algo sha256 %{__plaintext_filename}" \
               --addsign "$rpmname"
 
             echo "Copying signed package to local repo..."
