--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -183,13 +183,10 @@ jobs:
             rpmname=$(find release-artifacts/ -name 'polkadot-*.rpm' | head -n 1)
 
             echo "Signing package with pgpkms (via AWS KMS)..."
-            rpmsign \
-              -D "_signature gpg" \
-              -D "_gpg_name ${PGP_KMS_HASH}" \
+            rpm \
+              -D "_gpg_name 90BD75EBBB8E95CB3DA6078F94A4029AB4B35DAE" \
               -D "__gpg $HOME/.local/bin/pgpkms" \
-              -D "__gpg_sign_cmd %{__gpg} gpg --batch --no-verbose --no-armor \
-                  -u %{_gpg_name} -sbo %{__signature_filename} --digest-algo sha256 %{__plaintext_filename}" \
-              --addsign "$rpmname"
+              --resign "$rpmname"
 
             echo "Copying signed package to local repo..."
             cp "$rpmname" "$LOCAL_REPO_PATH/"
