--- a/substrate/frame/transaction-payment/Cargo.toml
+++ b/substrate/frame/transaction-payment/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pallet-transaction-payment"
 version = "28.0.0"
 authors.workspace = true
-edition.workspace = true
+edition = "2024"
 license = "Apache-2.0"
 homepage.workspace = true
 repository.workspace = true
@@ -20,6 +20,7 @@ codec = { features = ["derive"], workspace = true }
 frame-benchmarking = { optional = true, workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
+log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { optional = true, workspace = true, default-features = true }
 sp-io = { workspace = true }
@@ -36,6 +37,7 @@ std = [
 	"frame-benchmarking?/std",
 	"frame-support/std",
 	"frame-system/std",
+	"log/std",
 	"scale-info/std",
 	"serde",
 	"sp-io/std",
