chore: right aws acc for kms

--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -156,8 +156,8 @@ jobs:
 
       - name: Sync repo, import keys, sign, and update metadata
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.aws_release_access_key_id }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key_id }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_access_key }}
           PGP_KMS_KEY: ${{ secrets.pgp_kms_key }}
           PGP_KMS_HASH: ${{ secrets.pgp_kms_hash }}
         run: |
