Solve or ignore udeps

--- a/polkadot/runtime/parachains/Cargo.toml
+++ b/polkadot/runtime/parachains/Cargo.toml
@@ -165,3 +165,6 @@ runtime-metrics = [
 	"polkadot-runtime-metrics/runtime-metrics",
 	"sp-tracing/with-tracing",
 ]
+
+[package.metadata.cargo-udeps.ignore]
+development = ["thousands"]
