--- a/substrate/primitives/api/test/Cargo.toml
+++ b/substrate/primitives/api/test/Cargo.toml
@@ -43,3 +43,6 @@ static_assertions = { workspace = true, default-features = true }
 [features]
 enable-staging-api = []
 disable-ui-tests = []
+
+[package.metadata.cargo-udeps.ignore]
+normal = ["rustversion", "trybuild"]
