--- a/.github/workflows/check-semver.yml
+++ b/.github/workflows/check-semver.yml
@@ -1,6 +1,10 @@
 name: Check semver
 
 on:
+  # for cache
+  push:
+    branches:
+      - master
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
   workflow_dispatch:
@@ -82,6 +86,7 @@ jobs:
 
       - name: Get original PR number
         shell: bash
+        if: ${{ github.ref != 'refs/heads/master' }}
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
@@ -100,6 +105,7 @@ jobs:
           echo "PR_NUMBER=$original_pr_number" >> $GITHUB_ENV
 
       - name: Check semver
+        if: ${{ github.ref != 'refs/heads/master' }}
         env:
           PRDOC_EXTRA_ARGS: ${{ env.PRDOC_EXTRA_ARGS }}
           PR: ${{ env.PR_NUMBER }}
